package be.isims.ihm.dp.tp3.ex1.code;

public interface Conversion {
    public void actualise();
}
